--- a/index.html
+++ b/index.html
@@ -7,6 +7,57 @@
 </head>
  
 <body>
+    <body>
+        <h2>Molly Bruns</h2>
+        <p><img alt="placeholder image" src="https://picsum.photos/id/237/200/300"></p>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla volutpat massa lobortis
+          diam mollis cursus. Curabitur non tortor erat. Cras volutpat ante sed volutpat cursus. 
+          Phasellus vitae purus in mauris eleifend iaculis. Proin placerat sapien non orci 
+          venenatis hendrerit. Etiam sagittis ac enim eget consectetur. Aenean posuere tempor 
+          placerat. Etiam scelerisque enim aliquam mi faucibus, non ornare leo auctor. Nullam 
+          et scelerisque dolor. Mauris suscipit semper finibus.
+        </p>
+        <p>
+          Proin viverra condimentum lectus, et tincidunt elit venenatis at. Vestibulum nec 
+          bibendum purus, ornare suscipit libero. Proin pharetra ante sit amet euismod tincidunt. 
+          Cras viverra dui nec rhoncus sollicitudin. Nullam facilisis consectetur facilisis. 
+          Morbi interdum vulputate ligula, a molestie velit pellentesque id. Aliquam volutpat 
+          vehicula nunc, ac varius eros placerat sit amet. Mauris in scelerisque orci. Aenean 
+          semper ex sit amet erat dignissim posuere. Vestibulum quis pulvinar dui. Suspendisse 
+          iaculis cursus tincidunt. Proin vestibulum nibh nibh, eget consequat quam malesuada 
+          vitae. Donec luctus urna in ex commodo, vel consectetur urna commodo. Donec aliquet 
+          sollicitudin vehicula. Sed dolor justo, pretium ut diam eu, pellentesque tempus felis.
+        </p>
+        <ul>
+          <li><a href="facebook.com">Facebook</a></li>
+          <li><a href="instagram.com">Instagram</a></li>
+          <li><a href="twitter.com">Twitter</a></li>
+        </ul>
+        <table>
+          <tr>
+            <th>Movies</th>
+            <th>Songs</th>
+            <th>Activities</th>
+          </tr>
+          <tr>
+            <td>Casablanca</td>
+            <td>Born to Run</td>
+            <td>Knitting</td>
+          </tr>
+          <tr>
+            <td>Notorious</td>
+            <td>The Chain</td>
+            <td>Crocheting</td>
+          </tr>
+          <tr>
+            <td>Bringing Up Baby</td>
+            <td>September</td>
+            <td>Traveling</td>
+          </tr>    
+        </table>
+      
+      </body>
 </body>
  
 </html>
