--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <section id="main-bio">
       <section id="figure">
         <h2 id="bio-name">Molly Bruns</h2>
-        <img id="bio-image" src="https://picsum.photos/seed/picsum/200" alt="Molly Bruns">
-        <!-- <img id="bio-image" src="assets/69700798_10219792221342178_4458353426807390208_n.jpg" alt="Molly Bruns"> -->
+        <!-- <img id="bio-image" src="https://picsum.photos/seed/picsum/200" alt="Molly Bruns"> -->
+        <img id="bio-image" src="https://avatars.githubusercontent.com/u/103689113?s=400&u=946c75213eec3453ac5893d7a4414e29ecdebe58&v=4" alt="Molly Bruns">
       </section>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vestibulum risus ut justo laoreet consectetur. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nunc dui neque, malesuada egestas aliquet ac, commodo in magna. Etiam mollis odio at mi maximus hendrerit. Integer aliquam id lectus nec hendrerit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Mauris rhoncus eget nulla in ornare. Maecenas massa nibh, commodo non condimentum eu, congue tempus neque. Donec neque mi, ullamcorper eget fringilla et, iaculis vitae tortor. Curabitur vel nunc vel mi lobortis ornare ut non nulla. Etiam ornare libero ac suscipit aliquam. Nunc venenatis felis sit amet velit vehicula interdum. Vivamus iaculis condimentum nulla vitae dapibus.</p>
     </section>
