updating html and css files

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     <aside id="contact-info">
       <h2>Contact Info</h2>
       <ul>
-        <li><strong>Email:</strong> <a href="#">someone@gmail.com</a></li>
-        <li><strong>Github:</strong> <a href="#">mbruns13</a></li>
+        <li><strong>Email:</strong> <a href="mailto: mbruns13@gmail.com">mbruns13@gmail.com</a></li>
+        <li><strong>Github:</strong> <a href="https://github.com/mbruns13">mbruns13</a></li>
         <li><strong>Portfolio:</strong> <a href="#">coming soon</a></li>
       </ul>
     </aside>
