--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
         <!-- <img id="bio-image" src="https://picsum.photos/seed/picsum/200" alt="Molly Bruns"> -->
         <img id="bio-image" src="https://avatars.githubusercontent.com/u/103689113?s=400&u=946c75213eec3453ac5893d7a4414e29ecdebe58&v=4" alt="Molly Bruns">
       </section>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vestibulum risus ut justo laoreet consectetur. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nunc dui neque, malesuada egestas aliquet ac, commodo in magna. Etiam mollis odio at mi maximus hendrerit. Integer aliquam id lectus nec hendrerit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Mauris rhoncus eget nulla in ornare. Maecenas massa nibh, commodo non condimentum eu, congue tempus neque. Donec neque mi, ullamcorper eget fringilla et, iaculis vitae tortor. Curabitur vel nunc vel mi lobortis ornare ut non nulla. Etiam ornare libero ac suscipit aliquam. Nunc venenatis felis sit amet velit vehicula interdum. Vivamus iaculis condimentum nulla vitae dapibus.</p>
+      <p>My name is Molly Bruns. I'm originally from SW Ohio and am currently living in Illinois. I earned my B.A. in History from Wellesley College and am currently working as a project coordinator for a museum in Washington, D.C. 
+        In my museum-related work I've enjoyed working with data to help staff make informed decisions about exhibitions and programs.</p>
     </section>
 
     <aside id="contact-info">
