--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <!-- <img id="bio-image" src="https://picsum.photos/seed/picsum/200" alt="Molly Bruns"> -->
         <img id="bio-image" src="https://avatars.githubusercontent.com/u/103689113?s=400&u=946c75213eec3453ac5893d7a4414e29ecdebe58&v=4" alt="Molly Bruns">
       </section>
-      <p>My name is Molly Bruns. I'm originally from SW Ohio and am currently living in Illinois. I earned my B.A. in History from Wellesley College and am currently working as a project coordinator for a museum in Washington, D.C. 
+      <p>My name is Molly Bruns. I'm originally from Ohio and am currently living in Illinois. I earned my B.A. in History from Wellesley College and am currently working as a project coordinator for a museum in Washington, D.C. 
         In my museum-related work I've enjoyed working with data to help staff make informed decisions about exhibitions and programs.</p>
     </section>
 
